# aes-ni

./: .clang-format  .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README  README.md  aes-ni.cpp  aes-ni.hpp  aes-ni_impl.hpp  bench_aes-ni.cpp  conanfile.txt  rng.cpp  rng.hpp  search_module.cmake  search_openmp.cmake  test_aes-ni.cpp  util.hpp
.github/workflows/: build_linux.yml  build_macos.yml  linux.yml  macos.yml  macos.yml_  sample.yml
aes-ni_impl/: aen-ni_enc_impl.hpp  aen-ni_encdec_impl.hpp  aes-ni_inline.hpp  aes-ni_key-exp_impl.hpp
bench/: CMakeLists.txt  bench_aes_ctr.cpp  bench_aes_enc.cpp  bench_aes_encdec.cpp  bench_aes_mmo.cpp  bench_aesmmo.cpp  bench_aesprf.cpp  bench_aesprf_ctr.cpp  bench_config.hpp  bench_dev_urandom.cpp  bench_randen.cpp  bench_rdrand.cpp  bench_rng.cpp  bench_shuffle_fy.cpp  bench_shuffle_rs.cpp  benchmark.plot  run_benchmarks.sh  run_plotting.sh
clt/: aen-ni_encdec_impl.hpp  aes-ni_inline.hpp
cmake/: search_gmp.cmake  search_module.cmake  search_openmp.cmake
include/clt/: aen-ni_encdec_impl.hpp  aes-ni.hpp  aes-ni_inline.hpp  aes-ni_key-exp_impl.hpp  arg_type.hpp  benchmark.hpp  benchmark2.hpp  rdrand.hpp  rng.hpp  rng_inline.hpp  shuffle.hpp  statistics.hpp  util.hpp  util_demangle.hpp  util_integer.hpp  util_omp.hpp
include/clt/detail/: aen-ni_encdec_impl.hpp  aes-ni_inline.hpp  benchmark_inline.hpp  rng_inline.hpp
src/: CMakeLists.txt  CmakeLists.txt  aes-ni.cpp  benchmark.cpp  benchmark2.cpp  rdrand.cpp  rng.cpp  shuffle.cpp  util.cpp
test/: CMakeLists.txt  test_aes-ni.cpp  test_shuffle.cpp  test_util.cpp
travis-ci/: before_install_linux.bash  before_script_linux.bash  install_linux.bash  script_linux.bash
