cmake_minimum_required(VERSION 3.12.0)

# Determine this project is root-project or sub-project.
set(ROOT_PROJECT OFF)
if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
  set(ROOT_PROJECT ON)
  message(STATUS "CMake version: ${CMAKE_VERSION}")
  message("This is the root project.")
endif()

if(ROOT_PROJECT)
  if(NOT DEFINED CMAKE_CXX_STANDARD)
    set(CMAKE_CXX_STANDARD 20)
    message("Set CMAKE_CXX_STANDARD = ${CMAKE_CXX_STANDARD}")
  endif()
  set(CMAKE_CXX_STANDARD_REQUIRED ON)
  set(CMAKE_CXX_EXTENSIONS OFF)
  set(CMAKE_VERBOSE_MAKEFILE ON CACHE BOOL "ON")
endif()

enable_language(CXX)
project(aes-ni VERSION 0.0.4)

if(ROOT_PROJECT)
  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
endif()

if(ROOT_PROJECT)
  message("Modify compiler flags.")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -march=native")
  message("CMAKE_CXX_FLAGS = ${CMAKE_CXX_FLAGS}")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -g -fsanitize=address -fno-omit-frame-pointer -UNDEBUG")
  message("CMAKE_CXX_FLAGS_DEBUG = ${CMAKE_CXX_FLAGS_DEBUG}")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
  message("CMAKE_CXX_FLAGS_RELEASE = ${CMAKE_CXX_FLAGS_RELEASE}")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -O3 -g -fsanitize=address -UNDEBUG")
  message("CMAKE_CXX_FLAGS_RELWITHDEBINFO = ${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -Os -s -DNDEBUG")
  message("CMAKE_CXX_FLAGS_MINSIZEREL = ${CMAKE_CXX_FLAGS_MINSIZEREL}")
  message("CMAKE_EXE_LINKER_FLAGS = ${CMAKE_EXE_LINKER_FLAGS}")
endif()

if(ROOT_PROJECT)
  add_subdirectory("third_party")
  include("cmake/search_module.cmake")
else()
  message(STATUS "Skip search modules and third party libraries.")
endif()
add_subdirectory("src")
if(ROOT_PROJECT)
  add_subdirectory("bench")
  enable_testing()
  add_subdirectory("test")
else()
  message(STATUS "Skip building benchmarks and tests.")
endif()
